--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ python = "^3.12"
 ipykernel = "^6.29.5"
 pandas = "^2.2.3"
 openpyxl = "^3.1.5"
+plotly = "^6.0.0"
+matplotlib = "^3.10.1"
 
 
 [build-system]
